# Remove-Stars

./: README.md
Remove_stars/: CMakeLists.txt  main.cpp
untitled1/: CMakeLists.txt  main.c
